# basic-chip8

./: CMakeLists.txt  Makefile  README.md
libs/glad/include/glad/: gl.h
src/: chip8.c  chip8.h  main.c  renderer.c  renderer.h
